--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "postcss": "^8.4.27",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
