--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
-  "name": "vite-vanilla-ts-lib-starter",
-  "description": "Typescript library starter",
-  "version": "0.2.0",
+  "name": "tailwindcss-containment",
+  "description": "A tailwindcss plugin for css containment",
+  "version": "0.1.0",
   "license": "MIT",
   "author": "Aaron Zhou",
   "packageManager": "pnpm@8.6.3",
-  "main": "./dist/vite-ts-lib-starter.cjs",
-  "module": "./dist/vite-ts-lib-starter.mjs",
+  "homepage": "https://github.com/Clarkkkk/tailwindcss-containment#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Clarkkkk/tailwindcss-containment"
+  },
+  "bugs": {
+    "url": "https://github.com/Clarkkkk/tailwindcss-containment/issues"
+  },
+  "keywords": [
+    "tailwindcss",
+    "tailwindcss plugin",
+    "containment",
+    "css containment",
+    "contain",
+    "content visibility",
+    "contain intrinsic size",
+    "intrinsic"
+  ],
+  "main": "./dist/tailwindcss-containment.cjs",
+  "module": "./dist/tailwindcss-containment.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/vite-ts-lib-starter.cjs",
-      "import": "./dist/vite-ts-lib-starter.mjs"
+      "require": "./dist/tailwindcss-containment.cjs",
+      "import": "./dist/tailwindcss-containment.js"
     }
   },
+  "files": [
+    "./dist"
+  ],
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
